[workspace]
resolver = "2"
members = ["sentinel-rt"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1}

# Reserved so I remember that it exists...
[workspace.lints.rustdoc]

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
