[workspace]
resolver = "2"
members = ["sentinel-rt"]

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1}
# { level="warn", doc-valid-idents = ["SoC", "AttoSoC", ".."] } unimplemented: https://github.com/rust-lang/cargo/issues/12917#issuecomment-1795069197
doc_markdown = "allow"

[workspace.lints.rustdoc]
broken-intra-doc-links = "deny"

[profile.release]
lto = "fat"
codegen-units = 1
opt-level = "z"
