[project]
name = "sentinel"
version = "0.1.0"
description = "Embedded RISC-V implementation written in Amaranth"
authors = [
    {name = "William D. Jones", email = "thor0505@comcast.net"},
]
dependencies = [
    "m5meta>=1.0.4",
    "m5pre>=1.0.3",
    "amaranth @ git+https://github.com/amaranth-lang/amaranth",
    "tabulate>=0.9.0",
    "amaranth-soc @ git+https://github.com/amaranth-lang/amaranth-soc",
    "bronzebeard>=0.2.1",
    "amaranth-boards @ git+https://github.com/amaranth-lang/amaranth-boards",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pytest.ini_options]
pythonpath = [
  "src/",
]
markers = [
  "clks: tuple of clocks to register for simulator.",
  "module: top-level module to simulate."
]
addopts="--ignore=tests/upstream/binaries"

[tool.pdm.dev-dependencies]
dev = [
    "flake8>=6.1.0",
    "pytest>=7.4.2",
    "doit>=0.36.0",
    "Verilog-VCD>=1.11",
    "logLUTs @ git+https://github.com/mattvenn/logLUTs@a7fa902",
    "click>=8.1.7",  # Though I expect users to provide sby, sby requires
                     # this module and doesn't opt-in to PEP 517. So provide
                     # it here.
]

[tool.pdm.scripts]
lint = { cmd = "flake8" }
# Most Tests
test = { cmd = "pytest" }
test-quick = { cmd = "pytest -k \"test_top or test_upstream or test_witness\"" }
# Generate
gen = { call = "sentinel.gen:generate" }
demo = { call = "sentinel.gen:demo" }
# Obsolete?
bench = { call = "sentinel.bench:main"}
# DoIt wrappers. Prefer using these over running DoIt directly.
doit = { cmd = "doit" }
ucode = { cmd = "doit ucode" }
# LUTs
bench-luts = { cmd = "doit bench_luts"}
plot-luts = { cmd = "doit plot_luts"}
# Upstream
compile-upstream = { cmd = "doit _dump_tests"}
# RISC-V Formal
rvformal = { cmd = "doit run_sby:{args}_vcds"}
rvformal-force = { composite = [
    "doit forget run_sby:{args}",
    "rvformal {args}"
]}
rvformal-gen = { cmd = "doit formal_gen_files"}
rvformal-all = { cmd = "doit {args:-n 2} run_sby"}
rvformal-status = { cmd = "doit list_sby_status"}
