[package]
name = "sentinel-rt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
riscv = { version = "0.10.1", features = ["critical-section-single-hart"] }
riscv-rt = "0.11.0"

[dev-dependencies]
critical-section = { version = "1.1.2", default-features = false }
once_cell = { version = "1.18.0", default-features = false }
panic-halt = "0.2.0"
